🎨 Style: Fix cards list overflowing

--- a/client/src/ui/CardsList/CardsList.module.scss
+++ b/client/src/ui/CardsList/CardsList.module.scss
@@ -4,6 +4,10 @@
 
 .cardsList {
   @apply grid grid-cols-6;
+
+  li:nth-child(n + 7) {
+    @apply hidden;
+  }
 }
 
 // 5 x 170
@@ -12,7 +16,7 @@
     @apply grid-cols-5;
   }
 
-  .shrink li:nth-child(6) {
+  .shrink li:nth-child(n + 6) {
     @apply hidden;
   }
 }
@@ -23,7 +27,7 @@
     @apply grid-cols-4;
   }
 
-  .shrink li:nth-child(5) {
+  .shrink li:nth-child(n + 5) {
     display: none;
   }
 }
@@ -34,7 +38,7 @@
     @apply grid-cols-3;
   }
 
-  .shrink li:nth-child(4) {
+  .shrink li:nth-child(n + 4) {
     display: none;
   }
 }
